syntax = "proto3";

package api.mgmt;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "public/response/response.proto";
import "validate/validate.proto";


option go_package = "store/api/mgmt;mgmtpb";

service Mgmt {
  rpc GetAuthToken(GetAuthTokenParams) returns (AuthToken) {
    option (google.api.http) = {
      get: "/api/mgmt/auth-tokens"
    };
  }
  rpc SendEmail (SendEmailParams) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/mgmt/emails"
      body: "*"
    };
  };
}

message AuthToken {
  string token = 1;
}

message GetAuthTokenParams {
  string username = 1;
  string password = 2;
}

message SendEmailParams {

  message Args {
    string username = 1;
    string verifyCode = 2;
  }

  message Recipient {
    string email = 1;
    string subject = 2;
    string templateId = 3;
    Args args = 4;
  }

  repeated Recipient recipients = 1;
}
